@@ -1846,8 +1846,22 @@ sub handle_single_transform_list ($$$@)
             {
                 my $obj_sans_ext = substr ($object, 0,
 					   - length ($this_obj_ext));
-                push (@{$lang_specific_files{$lang->name}},
-		      "$derived $full $obj_sans_ext");
+		my $val = "$full $obj_sans_ext";
+
+		# If we renamed the object then we want to use the
+		# per-executable flag name.  But if this is simply a
+		# subdir build then we still want to use the AM_ flag
+		# name.
+		if ($renamed)
+		{
+		    $val = "$derived $val";
+		}
+		else
+		{
+		    $val = "AM $val";
+		}
+
+                push (@{$lang_specific_files{$lang->name}}, $val);
             }
         }
         elsif ($extension eq 'o')
