@@ -1,5 +1,11 @@
 2001-06-14  Tom Tromey  <tromey@redhat.com>
 
+	Fix for bug reported by Steve M. Robbins:
+	* automake.in (handle_single_transform_list): When building a file
+	from a subdirectory, continue to use `AM_' prefix.
+	* tests/Makefile.am (TESTS): Added subobj7.test.
+	* tests/subobj7.test: New file.
+
 	* lib/am/configure.am ($(top_builddir)/config.status): Added
 	$(top_builddir) prefix to work around problems with some vendor
 	makes.  From Nicholas Joly.
